--- a/.github/workflows/vikazure-webapps-dotnet-core.yml
+++ b/.github/workflows/vikazure-webapps-dotnet-core.yml
@@ -20,9 +20,12 @@
 name: Build and deploy ASP.Net Core app to an Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: your-app-name    # set this to the name of your Azure Web App
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '5'                 # set this to the .NET Core version to use
+  AZURE_WEBAPP_NAME: webappocz3rxvnf2ouq
+  AZURE_WEBAPP_PACKAGE_PATH: ./publish
+  AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.RedisCachePrivateLink_f3dd }}
+  CONFIGURATION: Release
+  DOTNET_CORE_VERSION: 3.1.x
+  WORKING_DIRECTORY: src
 
 on:
   push:
